--- a/app/build.gradle
+++ b/app/build.gradle
@@ -22,4 +22,6 @@ android {
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     compile 'com.android.support:appcompat-v7:21.0.3'
+    compile project(':google-play-services_lib')
+    compile 'com.google.android.gms:play-services:7.0.0'
 }
